Fix spacing at max screen width

--- a/client/components/Dashboard/Dashboard.css
+++ b/client/components/Dashboard/Dashboard.css
@@ -56,7 +56,7 @@ input, textarea {
   }
 
   .component {
-    /*height: auto;*/
+    height: auto;
     width: calc(33.333% - 20px);
   }
 }
@@ -65,7 +65,7 @@ input, textarea {
 @media all and (max-width: 1100px) {
   .mainDashboardPanel {
     width: 100vw;
-    max-width: 1500px;
+    /*max-width: 1500px;*/
     height: 100vh;
     /*border: 1px solid red;*/
     margin: 0px;
